# photonic-protocol

./: pnpm-lock.yaml  replit.md
.agents/memory/: MEMORY.md  photonic-contracts.md  photonic-sdk-exports.md
artifacts/photonic-frontend/: index.html  package.json
artifacts/photonic-frontend/.replit-artifact/: artifact.toml
artifacts/photonic-frontend/src/: App.tsx  index.css
attached_assets/: PHOTONIC_Proposal_1782504947411.md
photonic/: README.md
photonic/contracts/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
photonic/contracts/cache/: solidity-files-cache.json
photonic/contracts/contracts/: PhotonicAuction.sol  PhotonicEscrow.sol  (+3 more)
photonic/core/: Cargo.toml
photonic/core/src/: error.rs  lib.rs  main.rs
photonic/core/src/bpd/: generator.rs  merkle.rs  mod.rs  verifier.rs
photonic/core/src/cap/: adapter.rs  listener.rs  mod.rs  provider.rs
photonic/core/src/casc/: capsule.rs  continuity.rs  mod.rs
photonic/core/src/drp/: death.rs  mod.rs  resurrection.rs  vitality.rs
photonic/core/src/genome/: fitness.rs  merger.rs  mod.rs  parser.rs
photonic/core/src/saip/: auction.rs  commitment.rs  mod.rs  scorer.rs
photonic/core/tests/: bpd_tests.rs  casc_tests.rs  drp_tests.rs  genome_tests.rs  saip_tests.rs
photonic/python/: app.py  bpd_classifier.py  compatibility_scorer.py  fitness_predictor.py  requirements.txt  timescale.py
photonic/scripts/: github-api-push.mjs  github-push.sh
photonic/sdk/: package-lock.json  package.json
photonic/timescale/: schema.sql
scripts/: package.json  register-agents.mjs
(+37 files in other folders)
