[package]
name = "photonic-core"
version = "0.1.0"
edition = "2021"
description = "PHOTONIC Protocol Rust core — BPD, Genome, SAIP, CASC, DRP engines"
license = "MIT"

[lib]
name = "photonic_core"
path = "src/lib.rs"

[[bin]]
name = "photonic"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
base64 = "0.22"
merkle-light = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
